--- a/mesEditor.lpi
+++ b/mesEditor.lpi
@@ -46,8 +46,8 @@
         <EditorIndex Value="2"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
-        <CursorPos X="31" Y="20"/>
-        <UsageCount Value="69"/>
+        <CursorPos X="25" Y="19"/>
+        <UsageCount Value="132"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
@@ -59,9 +59,9 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="0"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="52" Y="19"/>
-        <UsageCount Value="69"/>
+        <TopLine Value="264"/>
+        <CursorPos X="74" Y="285"/>
+        <UsageCount Value="132"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit1>
@@ -70,7 +70,7 @@
         <WindowIndex Value="0"/>
         <TopLine Value="31"/>
         <CursorPos X="60" Y="9"/>
-        <UsageCount Value="5"/>
+        <UsageCount Value="8"/>
         <DefaultSyntaxHighlighter Value="LFM"/>
       </Unit2>
       <Unit3>
@@ -78,21 +78,21 @@
         <WindowIndex Value="0"/>
         <TopLine Value="129"/>
         <CursorPos X="37" Y="143"/>
-        <UsageCount Value="5"/>
+        <UsageCount Value="8"/>
       </Unit3>
       <Unit4>
         <Filename Value="C:\Lazarus\lcl\include\control.inc"/>
         <WindowIndex Value="0"/>
         <TopLine Value="928"/>
         <CursorPos X="34" Y="938"/>
-        <UsageCount Value="5"/>
+        <UsageCount Value="8"/>
       </Unit4>
       <Unit5>
         <Filename Value="C:\Lazarus\lcl\interfaces\win32\win32listsl.inc"/>
         <WindowIndex Value="0"/>
         <TopLine Value="369"/>
         <CursorPos X="1" Y="386"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="15"/>
       </Unit5>
       <Unit6>
         <Filename Value="about.pas"/>
@@ -104,36 +104,132 @@
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="40" Y="8"/>
-        <UsageCount Value="44"/>
+        <UsageCount Value="107"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit6>
     </Units>
-    <JumpHistory Count="6" HistoryIndex="5">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="mesEditor.lpr"/>
-        <Caret Line="15" Column="1" TopLine="1"/>
+        <Filename Value="main.pas"/>
+        <Caret Line="218" Column="25" TopLine="201"/>
       </Position1>
       <Position2>
-        <Filename Value="about.pas"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Filename Value="main.pas"/>
+        <Caret Line="260" Column="48" TopLine="239"/>
       </Position2>
       <Position3>
-        <Filename Value="about.pas"/>
-        <Caret Line="26" Column="21" TopLine="1"/>
+        <Filename Value="main.pas"/>
+        <Caret Line="221" Column="81" TopLine="202"/>
       </Position3>
       <Position4>
-        <Filename Value="about.pas"/>
-        <Caret Line="25" Column="21" TopLine="1"/>
+        <Filename Value="main.pas"/>
+        <Caret Line="239" Column="84" TopLine="217"/>
       </Position4>
       <Position5>
-        <Filename Value="about.pas"/>
-        <Caret Line="26" Column="21" TopLine="1"/>
+        <Filename Value="main.pas"/>
+        <Caret Line="194" Column="65" TopLine="177"/>
       </Position5>
       <Position6>
-        <Filename Value="about.pas"/>
-        <Caret Line="28" Column="21" TopLine="1"/>
+        <Filename Value="main.pas"/>
+        <Caret Line="92" Column="18" TopLine="77"/>
       </Position6>
+      <Position7>
+        <Filename Value="main.pas"/>
+        <Caret Line="190" Column="6" TopLine="172"/>
+      </Position7>
+      <Position8>
+        <Filename Value="main.pas"/>
+        <Caret Line="236" Column="49" TopLine="221"/>
+      </Position8>
+      <Position9>
+        <Filename Value="main.pas"/>
+        <Caret Line="240" Column="20" TopLine="225"/>
+      </Position9>
+      <Position10>
+        <Filename Value="main.pas"/>
+        <Caret Line="246" Column="24" TopLine="226"/>
+      </Position10>
+      <Position11>
+        <Filename Value="main.pas"/>
+        <Caret Line="278" Column="13" TopLine="261"/>
+      </Position11>
+      <Position12>
+        <Filename Value="mesEditor.lpr"/>
+        <Caret Line="20" Column="31" TopLine="1"/>
+      </Position12>
+      <Position13>
+        <Filename Value="mesEditor.lpr"/>
+        <Caret Line="19" Column="25" TopLine="1"/>
+      </Position13>
+      <Position14>
+        <Filename Value="main.pas"/>
+        <Caret Line="192" Column="58" TopLine="166"/>
+      </Position14>
+      <Position15>
+        <Filename Value="main.pas"/>
+        <Caret Line="194" Column="44" TopLine="171"/>
+      </Position15>
+      <Position16>
+        <Filename Value="main.pas"/>
+        <Caret Line="196" Column="50" TopLine="171"/>
+      </Position16>
+      <Position17>
+        <Filename Value="main.pas"/>
+        <Caret Line="121" Column="18" TopLine="101"/>
+      </Position17>
+      <Position18>
+        <Filename Value="main.pas"/>
+        <Caret Line="188" Column="42" TopLine="179"/>
+      </Position18>
+      <Position19>
+        <Filename Value="main.pas"/>
+        <Caret Line="197" Column="76" TopLine="171"/>
+      </Position19>
+      <Position20>
+        <Filename Value="main.pas"/>
+        <Caret Line="188" Column="23" TopLine="171"/>
+      </Position20>
+      <Position21>
+        <Filename Value="main.pas"/>
+        <Caret Line="247" Column="16" TopLine="230"/>
+      </Position21>
+      <Position22>
+        <Filename Value="main.pas"/>
+        <Caret Line="197" Column="66" TopLine="179"/>
+      </Position22>
+      <Position23>
+        <Filename Value="main.pas"/>
+        <Caret Line="190" Column="5" TopLine="171"/>
+      </Position23>
+      <Position24>
+        <Filename Value="main.pas"/>
+        <Caret Line="197" Column="85" TopLine="180"/>
+      </Position24>
+      <Position25>
+        <Filename Value="main.pas"/>
+        <Caret Line="298" Column="66" TopLine="274"/>
+      </Position25>
+      <Position26>
+        <Filename Value="main.pas"/>
+        <Caret Line="253" Column="46" TopLine="238"/>
+      </Position26>
+      <Position27>
+        <Filename Value="main.pas"/>
+        <Caret Line="276" Column="41" TopLine="259"/>
+      </Position27>
+      <Position28>
+        <Filename Value="main.pas"/>
+        <Caret Line="300" Column="15" TopLine="273"/>
+      </Position28>
+      <Position29>
+        <Filename Value="main.pas"/>
+        <Caret Line="3" Column="43" TopLine="1"/>
+      </Position29>
+      <Position30>
+        <Filename Value="main.pas"/>
+        <Caret Line="11" Column="9" TopLine="1"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
